# innfos-gluon-cpp-sdk

example/: CMakeLists.txt
example/src/advanced/: joint.cpp  motion.cpp
example/src/basic/: shutdown.cpp  startup.cpp
sdk/include/: mechnical_unit.h  robot_interface.h
sdk/sdk/include/: mechnical_unit.h  robot_interface.h
